--- a/phantomgames/Home/HomeScreen.storyboard
+++ b/phantomgames/Home/HomeScreen.storyboard
@@ -185,7 +185,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="hsq-RX-kB3"/>
                     <connections>
-                        <outlet property="HomeCollectionView" destination="Ma1-OL-EbA" id="KZb-cf-AnE"/>
+                        <outlet property="homeCollectionView" destination="Ma1-OL-EbA" id="KZb-cf-AnE"/>
                         <outlet property="tableView" destination="PrN-Kg-JvQ" id="fOj-1y-Yt1"/>
                     </connections>
                 </viewController>
