--- a/phantomgames/Home/CustomCells/CustomHomeTableViewCell.xib
+++ b/phantomgames/Home/CustomCells/CustomHomeTableViewCell.xib
@@ -42,7 +42,7 @@
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="gray" title="Game">
                             <backgroundConfiguration key="background">
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" systemColor="tableCellBlueTextColor"/>
                             </backgroundConfiguration>
                             <color key="baseBackgroundColor" systemColor="systemGray2Color"/>
                         </buttonConfiguration>
@@ -79,6 +79,9 @@
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tableCellBlueTextColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
